# Package specification, as defined here:
# https://packaging.python.org/en/latest/specifications/pyproject-toml/#pyproject-toml-spec

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "src.generation", "src.analysis", "src.utils", "judge"]

[project]
name = "src"
readme = "README.md"
version = "0.dev0"
authors = [{ name = "Lukas Twist", email = "itsluketwist@gmail.com" }]
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.11"
dependencies = [
    "ipywidgets",
    "jupyter",
    "langchoicebench",
    "llm-codegen-research[api]",
    "matplotlib",
    "numpy",
    "pandas",
    "plotly",
    "pydantic",
    "pyyaml",
    "rich",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "uv",
]

[project.scripts]
run = "src.cli:main"

[tool.uv.sources]
# use the local benchmark package (langchoicebench on PyPI) as an editable install
langchoicebench = { path = "benchmark", editable = true }

[tool.pytest.ini_options]
# add benchmark/ to sys.path so langchoicebench is importable without a full install
pythonpath = [".", "benchmark"]
